@@ -13,7 +13,11 @@ TESTS_ENVIRONMENT = env \
 	CREANDUS_SCRIPTDIR="$(top_builddir)/bash/" \
 	CREANDUS_TESTDIR="$(srcdir)/test" \
 	bash $(top_srcdir)/tools/run_test.bash
-TESTS = getent_TEST.bash die_TEST.bash read_userdata_TEST.bash
+TESTS = \
+	getent_TEST.bash \
+	die_TEST.bash \
+	read_userdata_TEST.bash \
+	read_groupdata_TEST.bash
 XFAIL_TESTS = die_TEST.bash
 check_SCRIPTS = $(top_srcdir)/tools/run_test.bash
 check_PROGRAMS = 
