@@ -2,7 +2,7 @@
 # Copyright 2008 Mike Kelly
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: die_TEST.bash.in 230 2008-03-27 01:10:28Z pioto $
+# $Id$
 
 
 . "${CREANDUS_SCRIPTDIR}/common/functions.bash" || exit 1
